--- a/index.html
+++ b/index.html
@@ -17,17 +17,13 @@
 <body background="background.jpg">
 <center>
 <h1 class="btn btn-warning heading">AI Video Surveillance</h1>
-<br><br>
+<br>
 <h3>The input name which you will give should match the names present in CoCo model then only it will detect</h3>
-<br>
 <h3>Object Name : </h3>
-<input>
-<br>
-<br>
+<input id="object_name">
 <button onclick="start()" class="btn btn-success" id="start">Start</button>
-<br><br>
+<br>
 <h3 id="number_of_objects" class="btn btn-warning"></h3>
-<br><br>
 <h3 id="status" class="btn btn-danger"></h3>
 </center>
 <div class="copy_right_footer">
