--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-	<title>AI Video Surveillance</title>
+	<title>Object finder web app</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -16,7 +16,7 @@
 
 <body background="background.jpg">
 <center>
-<h1 class="btn btn-warning heading">AI Video Surveillance</h1>
+<h1 class="btn btn-warning heading">Object finder web app </h1>
 <br>
 <h3>The input name which you will give should match the names present in CoCo model then only it will detect</h3>
 <h3>Object Name : </h3>
@@ -24,7 +24,7 @@
 <button onclick="start()" class="btn btn-success" id="start">Start</button>
 <br>
 <h3 id="number_of_objects" class="btn btn-warning"></h3>
-<h3 id="status" class="btn btn-danger"></h3>
+<h3 id="object_status" class="btn btn-danger"></h3>
 </center>
 <div class="copy_right_footer">
   Developed by - Aadi
